--- a/index.html
+++ b/index.html
@@ -5,11 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doante Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="banner">
-        <h1>Let's Help Those Who Are</h1>
-        <h1>More In Need</h1>
+        <div class="hero-image">
+            <div class="hero-text">
+                <br><br><br>
+                <h1 >Let's Help Those Who Are</h1>
+                <h1 >More In Need</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aliquam expedita, voluptas unde, quod esse rerum perspiciatis similique reprehenderit optio, ipsum dolorum sint hic. Sit sapiente maiores nulla ullam dolorum dolores necessitatibus omnis quae quaerat, veniam rerum temporibus maxime itaque.</p>
+
+                <a class="link-button" href="" target="_blank">Donate</a>
+                <br><br><br><br><br><br>
+            </div>
+        </div>
     </section>
+
+    <section class="donate-today">
+        <h1>Donate Today</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ab quidem, libero magnam vitae vero aut deserunt quae accusantium! Officiis!</p>
+
+        <div class="flexible-container">
+            <div class="divide-width">
+                <h3>100tk</h3>
+            </div>
+
+            <div class="divide-width checked">
+                <h3>200tk</h3>
+            </div>
+
+            <div class="divide-width">
+                <h3>500tk</h3>
+            </div>
+
+            <div class="divide-width">
+                <h3>1000tk</h3>
+            </div>
+
+            <div class="divide-width">
+                <h3>5000tk</h3>
+            </div>
+        </div> <br><br>
+
+        <form action="">
+            <input type="text" placeholder="Other amount (Taka)">
+        </form> <br>
+        <a class="link-button" href="#" target="_blank">Donate Now</a>
+    </section>
+
 </body>
 </html>
+
