feed, updates and footer area added successfully

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +30,7 @@
 
     <section class="donate-today">
         <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ab quidem, libero magnam vitae vero aut deserunt quae accusantium! Officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque optio reiciendis sapiente quia eum!</p>
 
         <div class="flexible-container">
             <div class="divide-width">
@@ -57,6 +60,91 @@
         <a class="link-button" href="#" target="_blank">Donate Now</a>
     </section>
 
+    <section class="donate-plan">
+        <h1>Our Donate Plan</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            deterruisset. No duo populo animal </p>
+
+        <div class="flexible-container">
+            <div id="food" class="one-third-width">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+    
+            <div id="shelter" class="one-third-width">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p>
+            </div>
+            
+            <div id="education" class="one-third-width">
+                <img src="icons/icon6.svg" alt="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="feed flexible-container">
+        <div class="divide-feed ">
+            <h1>Their lives depend on 
+                your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset. No duo populo 
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset.</p> <br>
+            <a class="link-button" href="">How to Contribute?</a>
+        </div>
+
+        <div class="divide-feed ">
+            <img src="images/donation8.jpg" alt="">
+        </div>        
+    </section>
+
+    <section class="feed flexible-container">
+        <div class="divide-feed ">
+            <img src="images/donation7.jpg" alt="">
+        </div>   
+
+        <div class="divide-feed ">
+            <h1>They need us to suvive</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset. No duo populo 
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset.</p> <br>
+            <a class="link-button" href="">How to Contribute?</a>
+        </div>     
+    </section>
+
+    <section class="get-my-updates">
+        <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti assumenda molestiae deserunt, corrupti officiis veritatis perferendis aliquid soluta ratione repellendus.</p>
+
+        <div class="form-area">
+            <form id="form2" class="updates-form" action="">
+                <input type="email" placeholder="Email" name="email"> 
+                <button >Subscribe</button>
+                <!-- <a class="link-button" href="">Subscribe</a> -->
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <h2>Be Humble</h2>
+        <small>I’m gonna do it</small>
+    </footer>
 </body>
 </html>
 
