--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 </head>
 <body>
     <section class="banner">
-        <div class="hero-image">
-            <div class="hero-text">
-                <br><br><br>
+        <div class="container">
+            <div class="banner-text">
                 <h1 >Let's Help Those Who Are</h1>
                 <h1 >More In Need</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aliquam expedita, voluptas unde, quod esse rerum perspiciatis similique reprehenderit optio, ipsum dolorum sint hic. Sit sapiente maiores nulla ullam dolorum dolores necessitatibus omnis quae quaerat, veniam rerum temporibus maxime itaque.</p>
+                <p>Donate now to help us support children, families, and communities facing disasters in places. Your gift can help provide essential rescue services to families, women, and children facing devastating disasters.  Your gift can also support our other critical work preparing communities and training firefighters.</p>
 
-                <a class="link-button" href="" target="_blank">Donate</a>
+                <a class="" href="" target="_blank">Donate</a>
                 <br><br><br><br><br><br>
             </div>
         </div>
@@ -30,7 +29,7 @@
 
     <section class="donate-today">
         <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque optio reiciendis sapiente quia eum!</p>
+        <p>Donate Today connects nonprofits, donors, and companies in nearly every country in the world. We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
 
         <div class="flexible-container">
             <div class="divide-width">
@@ -96,7 +95,7 @@
     </section>
 
     <section class="feed flexible-container">
-        <div class="divide-feed ">
+        <div class="half-feed ">
             <h1>Their lives depend on 
                 your donation</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit 
@@ -107,17 +106,17 @@
             <a class="link-button" href="">How to Contribute?</a>
         </div>
 
-        <div class="divide-feed ">
+        <div class="half-feed">
             <img src="images/donation8.jpg" alt="">
         </div>        
     </section>
 
     <section class="feed flexible-container">
-        <div class="divide-feed ">
+        <div class="half-feed ">
             <img src="images/donation7.jpg" alt="">
         </div>   
 
-        <div class="divide-feed ">
+        <div class="half-feed ">
             <h1>They need us to suvive</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit 
                 referrentur, at eam falli deterruisset. No duo populo 
@@ -130,7 +129,7 @@
 
     <section class="get-my-updates">
         <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti assumenda molestiae deserunt, corrupti officiis veritatis perferendis aliquid soluta ratione repellendus.</p>
+        <p>Receive the latest news on One Drop and its activities.</p>
 
         <div class="form-area">
             <form id="form2" class="updates-form" action="">
