my section added

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
                 <p>Donate now to help us support children, families, and communities facing disasters in places. Your gift can help provide essential rescue services to families, women, and children facing devastating disasters.  Your gift can also support our other critical work preparing communities and training firefighters.</p>
 
                 <a class="" href="" target="_blank">Donate</a>
-                <br><br><br><br><br><br>
             </div>
         </div>
     </section>
 
     <section class="donate-today">
         <h1>Donate Today</h1>
-        <p>Donate Today connects nonprofits, donors, and companies in nearly every country in the world. We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
+        <p>Donate to make a difference</p>
 
         <div class="flexible-container">
             <div class="divide-width">
@@ -61,8 +60,7 @@
 
     <section class="donate-plan">
         <h1>Our Donate Plan</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-            deterruisset. No duo populo animal </p>
+        <p>Donate Today connects nonprofits, donors, and companies in nearly every country in the world. We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
 
         <div class="flexible-container">
             <div id="food" class="one-third-width">
@@ -127,12 +125,38 @@
         </div>     
     </section>
 
+    <section class="my-section">
+        <div class="non-profit">
+            <h1>We are a non-profit too!</h1>
+            <h3>Donate Today is the global leader in online fundraising.</h3>
+            <p>We started GivenGain in 2001 with a simple idea: to enable global philanthropy by empowering individuals and non-profits to break down the barriers between and within ourselves. </p>
+        </div>
+
+        <div class="flexible-container">
+            <div class="non-profit-img ">
+                <img src="./images/funds-raised.png" alt="">
+                <h2>$43 million</h2>
+                <p>raised for over 2,700 charities worldwide</p>
+            </div>
+            <div class="non-profit-img ">
+                <img src="./images/donors.png" alt="">
+                <h2>188,000</h2>
+                <p>donors</p>
+            </div>
+            <div class="non-profit-img ">
+                <img src="./images/countries.png" alt="">
+                <h2>195</h2>
+                <p>countries</p>
+            </div>
+        </div>
+    </section>
+
     <section class="get-my-updates">
         <h1>Get My Updates</h1>
-        <p>Receive the latest news on One Drop and its activities.</p>
+        <p>Receive the latest news on Donate Today and its activities.</p>
 
         <div class="form-area">
-            <form id="form2" class="updates-form" action="">
+            <form action="">
                 <input type="email" placeholder="Email" name="email"> 
                 <button >Subscribe</button>
                 <!-- <a class="link-button" href="">Subscribe</a> -->
@@ -143,6 +167,7 @@
     <footer>
         <h2>Be Humble</h2>
         <small>I’m gonna do it</small>
+        <p>© Donate Today-2022 | Non profit Organization</p>
     </footer>
 </body>
 </html>
