donate today section updated

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="donate-plan">
         <h1>Our Donate Plan</h1>
-        <p>Donate Today connects nonprofits, donors, and companies in nearly every country in the world. We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
+        <p><strong>Donate Today</strong> connects nonprofits, donors, and companies in nearly every country in the world. We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
 
         <div class="flexible-container">
             <div id="food" class="one-third-width">
@@ -130,7 +130,7 @@
         <div class="non-profit">
             <h1>We are a non-profit too!</h1>
             <h3>Donate Today is the global leader in online fundraising.</h3>
-            <p>We started GivenGain in 2001 with a simple idea: to enable global philanthropy by empowering individuals and non-profits to break down the barriers between and within ourselves. </p>
+            <p>We started <strong>Donate Today</strong> in 2022 with a simple idea: to enable global philanthropy by empowering individuals and non-profits to break down the barriers between and within ourselves. </p>
         </div>
 
         <div class="flexible-container">
